# Generated by Django 6.0.6 on 2026-07-08 00:43

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='RendezVous',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date_heure', models.DateTimeField(verbose_name='date et heure du rendez-vous')),
                ('motif', models.CharField(max_length=200, verbose_name='motif de la visite')),
                ('statut', models.CharField(choices=[('demande', 'Demandé'), ('confirme', 'Confirmé'), ('annule', 'Annulé'), ('complete', 'Complété')], default='demande', max_length=20, verbose_name='statut')),
                ('date_creation', models.DateTimeField(auto_now_add=True)),
                ('date_modification', models.DateTimeField(auto_now=True)),
                ('client', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='rendez_vous', to=settings.AUTH_USER_MODEL, verbose_name='client')),
            ],
            options={
                'verbose_name': 'rendez-vous',
                'verbose_name_plural': 'rendez-vous',
                'ordering': ['date_heure'],
            },
        ),
    ]
