# Generated by Django 6.0.6 on 2026-07-09 15:14

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('reparations', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='TypeReparation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nom', models.CharField(max_length=200)),
                ('description', models.TextField(blank=True)),
                ('duree_estimee_heures', models.DecimalField(decimal_places=2, max_digits=4)),
                ('prix_standard', models.DecimalField(decimal_places=2, max_digits=8)),
                ('date_creation', models.DateTimeField(auto_now_add=True)),
                ('date_modification', models.DateTimeField(auto_now=True)),
            ],
            options={
                'ordering': ['nom'],
            },
        ),
    ]
