# Generated by Django 5.2.15 on 2026-07-09 02:20

import django.db.models.deletion
import vehicules.models
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Vehicule',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('marque', models.CharField(max_length=50)),
                ('modele', models.CharField(max_length=50)),
                ('annee', models.PositiveIntegerField(help_text='Année de fabrication du véhicule (ex: 2018)')),
                ('couleur', models.CharField(blank=True, max_length=30)),
                ('categorie', models.CharField(choices=[('PROMENADE', 'Véhicule de promenade'), ('CAMION_LEGER', 'Camion léger / VUS'), ('MOTO', 'Motocyclette'), ('REMORQUE', 'Remorque'), ('VEHICULE_LOURD', 'Véhicule lourd'), ('AUTRE', 'Autre')], default='PROMENADE', max_length=20, verbose_name='Catégorie de véhicule')),
                ('plaque_immatriculation', models.CharField(db_index=True, help_text='Format SAAQ, ex: ABC 123', max_length=10, unique=True, validators=[vehicules.models.valider_plaque_quebec], verbose_name="Plaque d'immatriculation (SAAQ)")),
                ('numero_certificat_immatriculation', models.CharField(blank=True, max_length=20, null=True, verbose_name="Numéro de certificat d'immatriculation")),
                ('vin', models.CharField(blank=True, max_length=17, null=True, unique=True, validators=[vehicules.models.valider_vin], verbose_name='NIV / Numéro de série (VIN)')),
                ('carburant', models.CharField(choices=[('ESSENCE', 'Essence'), ('DIESEL', 'Diesel'), ('HYBRIDE', 'Hybride'), ('HYBRIDE_RECHARGEABLE', 'Hybride rechargeable'), ('ELECTRIQUE', 'Électrique'), ('AUTRE', 'Autre')], default='ESSENCE', max_length=25)),
                ('kilometrage', models.PositiveIntegerField(default=0, verbose_name='Kilométrage (km)')),
                ('date_creation', models.DateTimeField(auto_now_add=True)),
                ('date_modification', models.DateTimeField(auto_now=True)),
                ('actif', models.BooleanField(default=True)),
                ('proprietaire', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='vehicules', to=settings.AUTH_USER_MODEL, verbose_name='Propriétaire')),
            ],
            options={
                'verbose_name': 'Véhicule',
                'verbose_name_plural': 'Véhicules',
                'ordering': ['-date_creation'],
            },
        ),
    ]
